--- a/index.css
+++ b/index.css
@@ -110,24 +110,32 @@ nav a {
     margin-right: 5%;
     display: grid;
     row-gap: 40px;
-    grid-template-rows: 289px;
+    /* grid-template-rows: 289px; */
 
 }
 
-.grid h3 {
+.grid .h3 {
+    background: linear-gradient(to bottom, #FF6F48 20%, #F02AA6 80%);
+border-radius: 10px;
+}
 
-    margin-top: 0;
+
+
+.grid h3 {
+margin-bottom: 0;
+    margin-top: 18px;
     font-weight: 800;
     font-size: 24px;
     line-height: 32px;
     color: white;
-    padding: 10% 10%;
+    padding: 10%;
     border-radius: 10px;
-    background: linear-gradient(to bottom, #FF6F48 20%, #F02AA6 80%);
+    
 }
 
 
 .box {
+    margin-top: 0;
     background-color: white;
     border-radius: 10px;
     height: aut0;
@@ -232,6 +240,7 @@ footer a {
         font-weight: 700;
         width: 28%;
         margin-right: 10%;
+        z-index: 2;
     }
 
     /*********************************/
@@ -259,6 +268,7 @@ footer a {
     .overflow {
         margin-right: 0%;
         overflow: hidden;
+        z-index: 1;
     }
 
     .grid {
@@ -267,7 +277,13 @@ footer a {
         grid-template-columns: repeat(2, 1fr);
         margin-left: 10%;
         margin-right: 10%;
+        height: auto;
+        /* grid-template-rows: 278px; */
 
+    }
+
+    .grid .h3 {
+        height: auto;
     }
 
 
